   say `#include <click/element.hh>' instead, and the same for many other
   include files. Check under include/click for a full list. This was
   required to support element packages better.

** Improved support for element packages. Required changes to the
   configuration shell scripts, and added a new directory,
   `etc/samplepackage', to show how packages should be compiled.


Version 1.1b1   4.Oct.2000

* Incompatible element changes

** Added support for parsing CIDR-style [Classless Inter-Domain Routing]
   netmasks in element configuration strings. Old-style netmasks are still
   supported, but you must use a slash, not a space. So for the 18.26.7
   IP prefix, you can write either `18.26.7.0/255.255.255.0' or
   `18.26.7.0/24'. You will need to change the arguments to any
   ARPResponder, FromLinux, LookupIPRoute, LookupIPRoute2, and RIPSend
   elements in your configuration files.

** Deprecated FromBPF and ToBPF in favor of FromDevice and ToDevice. (But
   the arguments to FromDevice and ToDevice are the same as FromBPF and
   ToBPF.)

** The KernelTap element (formerly Tun) no longer takes a device name as
   the first argument; it chooses between /dev/tun and /dev/tap
   automatically. KernelTap also expects and produces ethernet-encapsulated
   packets (rather than IP), as the Ethernet type field lets it handle IPv6
   packets as well as IPv4.

** Changed the third argument to RatedSource. Used to be a duration to send
   packets; now it is the number of packets to send.

** The following elements have been renamed.

	OLD			NEW
	------------------	------------------
	CheckPaint*		PaintTee
	FromBPF			FromDevice
	HashDemux*		HashSwitch
	Meter			BandwidthMeter
	PacketMeter		Meter
	PacketShaper		Shaper
	PullToPush*		Unqueue
	SetIPAddress+		StoreIPAddress
	Shaper			BandwidthShaper
	ToBPF			ToDevice
	Tun			KernelTap

   * Old element name may still be used for this release, but is
     deprecated.
   + A new element has taken the name SetIPAddress.
