@@ -153,7 +153,7 @@ ELEMENTS_ARG_ENABLE(ethernet, [include Ethernet elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(ip, [include IP, UDP, and TCP elements (on by default)], yes)
 ELEMENTS_ARG_ENABLE(ip6, [include IPv6 elements (EXPERIMENTAL)], no, AC_DEFINE(HAVE_IP6))
 ELEMENTS_ARG_ENABLE(app, [include application-level elements (on by default)], yes)
-ELEMENTS_ARG_ENABLE(etherswitch, [include Ethernet switch elements (EXPERIMENTAL)], yes)
+ELEMENTS_ARG_ENABLE(etherswitch, [include Ethernet switch elements (EXPERIMENTAL)], no)
 dnl ELEMENTS_ARG_ENABLE(ipsec, [include IP security elements], no, AC_DEFINE(HAVE_IPSEC))
 ELEMENTS_ARG_ENABLE(radio, [include radio elements (EXPERIMENTAL)], no)
 ELEMENTS_ARG_ENABLE(local, [include local elements], no)
