@@ -12,6 +12,7 @@
 #define CLICK_LLRPC_KUTUNNEL_GET_PACKET			0xC400C706
 #define CLICK_LLRPC_IPREWRITER_MAP_TCP			0xC400C707
 #define CLICK_LLRPC_IPREWRITER_MAP_UDP			0xC400C708
+#define CLICK_LLRPC_MARK_TIMESTAMP			0xC400C709
 
 
 // data manipulation
